# sift

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  zkauth-sdk-0.1.0.tgz
api/: package.json  pnpm-lock.yaml  tsconfig.json
api/src/: db.ts  env.ts  index.ts  merkle.ts  stellar.ts
api/src/routes/: admin.ts  public.ts
circuits/eligibility/: Nargo.toml
circuits/eligibility/src/: main.nr
circuits/zkpay/src/: main.nr
contracts/shielded-counter/: Cargo.toml
contracts/shielded-counter/src/: lib.rs
contracts/zkgate/: Cargo.toml
contracts/zkgate/src/: lib.rs
contracts/zkpay/: Cargo.toml
contracts/zkpay/src/: lib.rs
crates/ultrahonk-soroban-verifier/: Cargo.toml
demo/: next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
demo/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
demo/src/lib/: counterClient.ts
demo/src/zkpay/: burner.ts  button.tsx  circuit.ts  config.ts  contract.ts  crypto.ts  hook.ts  index.ts  privy.ts  provider.tsx  state.ts
examples/: demo_full.mjs
frontend/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/public/circuit/: eligibility.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: AdminPanel.tsx  ClaimSubmit.tsx  ConnectWallet.tsx  ProofGen.tsx  (+4 more)
old/: index.html  localhost+3-key.pem  localhost+3.pem  package.json  tsconfig.json  vite.config.ts
old/public/: circuit.json
old/src/: App.tsx
scripts/: deploy.sh  generate_prover_data.mjs  test_e2e.sh
(+20 files in other folders)
