[workspace]
resolver = "2"
members = [
    "crates/ultrahonk-soroban-verifier",
    "contracts/zkpay",
]

[workspace.dependencies]
soroban-sdk = { version = "26.0.1", default-features = false }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true
